psa_audit_privileged_test_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: v1.24
