kyverno_disallow_privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: pod-security-admission-disallow-privileged
spec:
  validationFailureAction: enforce
  rules:
    - validate:
        pattern:
          spec:
            "=(initContainers)":
              - "=(securityContext)":
                  "=(privileged)": false
            "=(ephemeralContainers)":
              - "=(securityContext)":
                  "=(privileged)": false
            containers:
              - "=(securityContext)":
                  "=(privileged)": false
        message: You should not run your pod as privileged
      match:
        resources:
          kinds:
            - Pod
          namespaces:
            - "test"
      name: pod-security-admission-disallow-privileged
